# Playnote

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE.txt  Playnote.manifest  README.md  extracted.manifest  organization.md  rustfmt.toml  vcpkg.json
.github/workflows/: linux-build.yml  windows-build.yml
cmake/: AddProcessedFont.cmake  AddSlangShader.cmake  Assets.cmake  Dependencies.cmake  FetchSlang.cmake  Flags.cmake  GenerateAtlas.cmake  PackAssets.cmake  PlaynoteAssets.cmake  SetupPythonEnv.cmake  Shaders.cmake
cmake/triplets/: x64-windows-static-md.cmake
doc/: departures.md  organization.md  pipeline.md
src/: audio_thread.cppm  bms.cppm  config.cpp  config.cppm  config.hpp  event_loop.hpp  gfx.rs  globals.cppm  input.cpp  input.hpp  input_thread.cppm  logger.cppm  logger.hpp  main.cpp  main.rs  playnote.cpp  playnote.hpp  preamble.cppm  preamble.hpp  render.cpp  render.hpp  render_thread.cppm  service.hpp  threads.rs
src/audio/: codec.hpp  mixer.cpp  mixer.hpp  player.cpp  player.hpp  player_legacy.hpp  renderer.cpp  renderer.hpp
src/bms/: audio_player.cppm  audio_player.hpp  build.cppm  build.hpp  build_legacy.hpp  builder.cpp  builder.hpp  charset.cppm  chart.cppm  chart.hpp  cursor.cpp  cursor.cppm  cursor.hpp  cursor_legacy.hpp  input.hpp  ir.cppm  ir.hpp  ir_legacy.hpp  library.cpp  library.hpp  loudness.cppm  mapper.cpp  mapper.hpp  parser.cppm  parser.hpp  pipeline.md  score.cpp  score.hpp
src/dev/: audio.cpp  audio.cppm  audio.hpp  controller.cpp  controller.hpp  gpu.cpp  gpu.cppm  gpu.hpp  os.cppm  os.hpp  window.cpp  window.cppm  window.hpp
src/gfx/: egui.rs  entity.hpp  gpu.rs  imgui.cppm  imgui.hpp  playfield.cpp  playfield.cppm  playfield.hpp  playfield_legacy.hpp  prewarm.hpp  renderer.cpp  renderer.cppm  renderer.hpp  text.cpp  text.hpp  transform.hpp
src/gpu/: circles.comp  circles.slang  circles_aa.slang  circles_blur.slang  draw_all.slang  gamma.comp  gamma.slang  gen_tiles.slang  imgui.frag  imgui.slang  imgui.vert  lib.slang  primitives.slang  rects.frag  rects.slang  rects.vert  shaders.cpp  shaders.hpp  worklist_gen.slang  worklist_sort.slang
src/gpu/lib/: color.slang  geom.slang  math.slang  sdf.slang
src/gpu/shared/: circles.slang.h  config.slang.h  primitive.slang.h  primitives.slang.h  rects.slang.h  tiles.slang.h  transform.slang.h  worklist.slang.h
src/io/: audio_codec.cppm  audio_codec.hpp  bulk_request.cppm  bulk_request.hpp  file.cpp  file.cppm  file.hpp  song.cpp  song.hpp  song_legacy.hpp  source.cpp  source.hpp
src/lib/: archive.cpp  archive.hpp  audio_common.hpp  bits.hpp  coro.hpp  debug.cpp  debug.cppm  debug.hpp  ebur128.cpp  ebur128.cppm  ebur128.hpp  ffmpeg.cpp  ffmpeg.cppm  ffmpeg.hpp  freetype.cpp  freetype.hpp  glfw.cpp  glfw.cppm  glfw.hpp  harfbuzz.cpp  harfbuzz.hpp  icu.cpp  icu.cppm  icu.hpp  imconfig.h  imgui.cpp  imgui.cppm  imgui.hpp  mio.cppm  mio.hpp  mpmc.hpp  msdf.cpp  msdf.hpp  openssl.cpp  openssl.cppm  openssl.hpp  os.cpp  os.hpp  pipewire.cpp  pipewire.cppm  (+22 more)
src/macros/: assert.hpp  logger.hpp  tracing.hpp  vuk.hpp
src/preamble/: algorithm.cppm  algorithm.hpp  concepts.cppm  concepts.hpp  container.cppm  container.hpp  coro.hpp  except.cppm  except.hpp  id.cppm  id.hpp  math.cppm  math.hpp  math_ext.cppm  math_ext.hpp  os.cppm  os.hpp  string.cppm  string.hpp  time.cppm  time.hpp  types.cppm  types.hpp  utility.cppm  utility.hpp
src/stx/: callable.cppm  concepts.cppm  except.cppm  math.cppm  types.cppm
src/sys/: audio.cppm  gpu.cpp  gpu.cppm  os.cpp  os.cppm  os.hpp  window.cpp  window.cppm  window.hpp
src/threads/: audio.cpp  audio.cppm  audio.hpp  audio.rs  audio_shouts.cppm  audio_shouts.hpp  broadcaster.cppm  broadcaster.hpp  input.cpp  input.cppm  input.hpp  input.rs  input_events.cppm  input_shouts.cppm  input_shouts.hpp  render.cpp  render.cppm  render.hpp  render.rs  render_events.cppm  render_shouts.cppm  render_shouts.hpp  task_pool.hpp  task_queue.hpp  tools.hpp
src/util/: charset.cppm  concepts.hpp  except.hpp  file.cppm  locator.cppm  log_macros.hpp  logger.cpp  logger.cppm  logger.hpp  math.cppm  math.hpp  raii.cppm  ranges.hpp  service.cppm  service.hpp  time.hpp  types.hpp
src/utils/: assert.hpp  assets.cpp  assets.hpp  broadcaster.hpp  config.cpp  config.hpp  logger.cpp  logger.hpp  service.hpp  task_pool.hpp
tools/: generate_atlas.cpp  pack_assets.cpp  process_font.py  requirements.txt
