[package]
name = "playnote"
version = "0.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
pollster = "0.4.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wgpu = "25.0.2"
winit = "0.30.11"
egui = { version = "0.32.0", features = ["log"] }
egui-winit = "0.32.0"
egui-wgpu = { version = "0.32.0", features = ["winit"] }
pipewire = "0.8.0"
